crates/core-subsystem/core-resolver/src/validation/snapshots/variable_resolution_invalid.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
expression: value
---
Err(
    VariableNotFound(
        "venue_id",
        Pos(2:39),
    ),
)
