crates/core-subsystem/core-resolver/src/validation/snapshots/variable_resolution_valid.snap
---
source: crates/core-subsystem/core-resolver/src/validation/document_validator.rs
expression: value
---
Ok(
    ValidatedOperation {
        name: None,
        typ: Query,
        fields: [
            ValidatedField {
                alias: None,
                name: Name(
                    "concert",
                ),
                arguments: {
                    "id": Number(
                        Number(1),
                    ),
                },
                subfields: [
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "id",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "title",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                ],
            },
            ValidatedField {
                alias: None,
                name: Name(
                    "venue",
                ),
                arguments: {
                    "id": Number(
                        Number(2),
                    ),
                },
                subfields: [
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "id",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                    ValidatedField {
                        alias: None,
                        name: Name(
                            "name",
                        ),
                        arguments: {},
                        subfields: [],
                    },
                ],
            },
        ],
    },
)
